fix: adjust colors, font sizes, spacings

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,40 +1,68 @@
-.nav-link {
-  font-size: 1.2rem !important;
+:root {
+  --palette-blue: #005981;
+  --palette-red: #a9262c;
+  --palette-orange: #e57536;
+  --palette-yellow: #f9c926;
 }
+
+.btn-primary {
+  background-color: var(--palette-red);
+  border-color: var(--palette-red);
+}
+
+.nav-link {
+  font-size: 1rem !important;
+}
+
+.header { padding-bottom: 30px; }
 
 .header .navbar-brand img {
   width: 230px;
   max-height: 80px;
 }
 
+body .section:last-of-type {
+  background-image:
+  linear-gradient(180deg, #FFFFFF00 60%, var(--palette-blue) 60%),
+    url(../img/contact-bg.png);
+
+  background-repeat: repeat, repeat-x;
+  background-position: bottom left, bottom left;
+}
+
+footer.footer {
+  background-color: var(--palette-blue);
+}
+
 table.schedule {
   margin: 3rem 0;
   width: 100%;
-  border-spacing: 10px;
-  font-size: 1.2rem;
-  border: 1px solid #000;
+  font-size: 1.1rem;
   border-collapse: collapse;
 }
 
 table.schedule thead {
-  font-size: 1.3rem;
-  background: #000;
-  color: #fff;
+  font-size: 1.15rem;
+  border-bottom: 1px solid #666;
 }
 
 table.schedule thead th {
-  padding: 10px;
+  padding: 1rem;
+  padding-top: 3rem;
+}
+table.schedule thead:first-of-type th {
+  padding-top: 1rem;
 }
 
 table.schedule tbody {
 }
 table.schedule tbody td {
-  padding: 20px 10px;
+  padding: 1rem;
 }
 table.schedule tbody td.time {
 }
 table.schedule tbody td.title p {
-  font-size: 1.5rem;
+  font-size: 1rem;
   margin: 0;
 }
 table.schedule tbody td.title p:first-child {
@@ -52,5 +80,5 @@ tbody tr:nth-child(odd) {
 }
 
 tbody tr:nth-child(even) {
-  background-color: #f0f0f0;
+  background-color: #fafafa;
 }
